# grimoire

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  Readme.md  build.js  build.ts  bun.lockb  content  esbuild.config.js  flake.nix  grimoire.config.json  index.html  out.json  package.json  shell.nix  tailwind.config.js  test.css  vite.config.ts
.github/workflows/: deploy.yml
Cheat_Sheets/: Git.html  ansi_color_codes.html  ssh_android_to_pc.html
Courses/Boot_Dev/: HTTP.html
Courses/CSES/: Complete_Search.html  Data_Structures.html
Courses/Data_Structures_and_algorithms/: backtracking.html  linear_data_structure.html  tree.html
Courses/System_Design/: Introduction.html
Miscellaneous/: Self-Hosting Bitwarden.html  The_Caret_Conundrum.html
University/: asdf.html
University/Economics/: Module_1.html  Module_2.html  Module_3.html  Module_4.html  Module_5.html
University/OOP/: Module_1.html
University/asdf/: hello.html
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/commands/: add.rs  build.rs  clean.rs  init.rs  list.rs  mod.rs  serve.rs
cli/static/: grimoire.config.json
cli/static/examples/: blog.md  index.md  static.md
cli/static/styles/: styles.css
cli/static/templates/: blog.hbs  page.hbs  post.hbs
content/: About.md  Bookmarks.md  CS_Resource.md  Contact.md  Home.md  ML_Resource.md  Resource.md  index.md  resource.md
content/Blog/: 2.md  3.md
content/Cheat_Sheets/: Git.md
content/University/: asdf.md
content/blog/: 1.md  2.md
content/daily/: day_1.md  day_2.md
content/notes/: Note 1.md  Note 2.md  Note 3.md  Note-1.md  Note-2.md  Note-3.md
grimoire/: grimoire.config.json
grimoire/public/: about.html  index.html  style.css
grimoire/templates/: index.html  static.html
src/: build.ts  cli.ts  clone.ts  colors.ts  consts.rs  consts.ts  file-tree.ts  git.ts  index.ts  main.rs  main.ts  process.ts  remark.ts  search.ts  setup.ts  styles.css  types.ts  utils.rs  utils.ts
src/cli/: add.rs  build.rs  clean.rs  init.rs  list.rs  mod.rs  (+1 more)
static/: blog.html  blog.md  index.html  search-index.json  static.html  styles.css
templates/: base.hbs  index.hbs  layout.hbs  navbar.hbs  page.hbs
test/: grimoire.config.json
(+114 files in other folders)
