[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["ws"]}
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
deno_core = "0.353.0"
rust-embed = "8.7.2"
time-util = { version = "0.3.4", features = ["chrono"] }
tokio = { version = "1.47.0", features = ["full"] }
walkdir = "2.5.0"
which = "8.0.0"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
notify = "8.1.0"
tracing = "0.1.41"
futures-util = "0.3.31"
futures = "0.3.31"
tracing-subscriber = "0.3.19"
